@@ -5413,7 +5413,6 @@ tool, and its version number.
 * Which Procedure: which procedure.
 * Grep Procedure: grep procedure.
 * Prune Procedure: prune procedure.
-* Slay Procedure: slay procedure.
 * Runtest_file_p Procedure: runtest_file_p procedure.
 * Diff Procedure: diff procedure.
 * Setenv Procedure: setenv procedure.
@@ -5537,7 +5536,7 @@ Prefix the line number to each line where the
 regexp matches.
 @end table
 
-@node prune procedure, slay procedure, grep procedure, Utility Procedures
+@node prune procedure, runtest_file_p procedure, grep procedure, Utility Procedures
 @subsubsection Prune Procedure
 
 This procedure is deprecated and will be removed in
@@ -5545,15 +5544,7 @@ the next release of DejaGnu.  If a testsuite uses this
 procedure, a copy of the procedure should be made and placed
 in the lib directory of the testsuite.
 
-@node slay procedure, runtest_file_p procedure, prune procedure, Utility Procedures
-@subsubsection Slay Procedure
-
-This procedure is deprecated and will be removed in
-the next release of DejaGnu.  If a testsuite uses this
-procedure, a copy of the procedure should be made and placed
-in the lib directory of the testsuite.
-
-@node runtest_file_p procedure, diff procedure, slay procedure, Utility Procedures
+@node runtest_file_p procedure, diff procedure, prune procedure, Utility Procedures
 @subsubsection Runtest_file_p Procedure
 
 Search @emph{runtest}s for
